# fast-giftgo

./: .gitignore  Cargo.toml
src/: main.rs
templates/: base.html  css-reset.css  list.html  list_partial.html  lists.html  utilities.css
