[package]
name = "fast-giftgo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.7.0"
serde = "1"
tokio = { version = "1", features = ["full"] }
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
warp = "0.3"
askama = { version = "0.12.1", features = ["with-warp"] }
askama_warp = "0.13.0"
tokio-stream = "0.1.14"
